# test-release-actions

./: README.md  pyproject.toml
.github/workflows/: deploy.yml  version.yml
test_module/: __main__.py
