[tool.poetry]
name = "craigs-testmodule"
version = "2.0.0"
description = ""
authors = ["volttron <volttron@pnnl.gov>"]
license = "Apache 2"

packages = [
    { include = "test_module"}
]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

